--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
     <div class="calculator">
         <input type="text" id="display" name="display">
         <div class="buttons">
-            <div class="digit">1</div>
-            <div class="digit">2</div>
-            <div class="digit">3</div>
-            <div class="operator">-</div>
-            <div class="digit">4</div>
-            <div class="digit">5</div>
-            <div class="digit">6</div>
-            <div class="operator">+</div>
-            <div class="digit">7</div>
-            <div class="digit">8</div>
-            <div class="digit">9</div>
-            <div class="operator">/</div>
-            <div class="decimal">.</div>
-            <div class="digit">0</div>
+            <div class="button digit">1</div>
+            <div class="button digit">2</div>
+            <div class="button digit">3</div>
+            <div class="button operator">-</div>
+            <div class="button digit">4</div>
+            <div class="button digit">5</div>
+            <div class="button digit">6</div>
+            <div class="button operator">+</div>
+            <div class="button digit">7</div>
+            <div class="button digit">8</div>
+            <div class="button digit">9</div>
+            <div class="button operator">/</div>
+            <div class="button decimal">.</div>
+            <div class="button digit">0</div>
             <div class="callback">=</div>
-            <div class="operator">x</div>
-            <div class="special">C</div>
-            <div class="del">del</div>
+            <div class="button operator">x</div>
+            <div class="button special">C</div>
+            <div class="button del">del</div>
             
             
         </div>
